--- a/VLstyle.css
+++ b/VLstyle.css
@@ -67,6 +67,34 @@ label {
     height: 100%;
 }
 
+#create-account {
+	margin-top:50px;
+	margin-left:36.5%;
+	background-color:#F0E68C;
+	padding:10px 10px;
+	width:200px;
+	height:70px;
+	text-align:center;
+	border-radius:20px;
+	border:solid 5px #FFBF00;
+	font-family: 'Comfortaa', cursive;
+	font-size:20px;
+	font-weight:bold;
+	color:#FF8C00;
+	text-shadow:1px 2px 2px #202020;
+	box-shadow:1px 2px 2px #202020;
+}
+
+#create-account:hover {
+	background-color:#FFBF00;
+	color:white;
+	box-shadow:1px 2px 10px #202020;
+}
+
+.instructions {
+	color:#423B3B;
+}
+
 .list {
 	height:400px;
 	width:950px;
