--- a/VLstyle.css
+++ b/VLstyle.css
@@ -106,6 +106,22 @@ label {
 	font-size:20px;
 	overflow:auto;
 	line-height: 300%;
+	padding-top: 10px;
+}
+
+.list a{
+	color: #FF8C00;
+	background-color: #F0E68C;
+	border: solid #FF8C00;
+	padding: 10px;
+	border-radius: 50px;
+	text-decoration: none;
+}
+
+.list a:hover {
+	background-color: #FFBF00;
+	color: white;
+	transition: 0.5s;
 }
 
 .lien {
