--- a/VLstyle.css
+++ b/VLstyle.css
@@ -91,6 +91,23 @@ label {
 	box-shadow:1px 2px 10px #202020;
 }
 
+.insertions{
+    margin-bottom:-10px;
+}
+
+.choix {
+    margin:30px;
+}
+
+#relation {
+    border:none;
+    width:100px;
+    height:10px;
+    padding:10px;
+    border-radius: 5px;
+	font-family: 'Comfortaa', cursive;
+}
+
 .instructions {
 	color:#423B3B;
 }
